[project]
name = "h-crypto-price-bot"
version = "1.5.0"
description = ""
authors = ["halon176 <acc.github@halon.cc>"]
version = "1.4.0"
description = "Telegram bot per prezzi crypto"
readme = "README.md"
authors = [{ name = "halon176", email = "acc.github@halon.cc" }]
requires-python = ">=3.13,<3.14"

dependencies = [
    "python-telegram-bot>=22.0,<22.6",
    "web3>=7.2.0,<8.0.0",
    "feedparser>=6.0.10,<7.0.0",
    "pandas>=2.2.2,<3.0.0",
    "kaleido==0.2.1",
    "plotly>=6.0.1,<7.0.0",
    "pydantic-settings>=2.6.1,<3.0.0",
    "telegramify-markdown>=0.5.1,<1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3,<9.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "ruff>=0.13.3",
]


[tool.ruff]
exclude = ["build", "dist", "venv", ".venv", ".git", ".tox", ".mypy_cache", ".pytest_cache", ".vscode", ".idea", "poetry.lock"]
line-length = 120
indent-width = 4
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.pytest.ini_options]
addopts = "-v"
